--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -553,8 +553,15 @@ header{
     margin-top: 10px;
 
 }
+.social-icons a:link,
+.social-icons a:visited,
 .social-text a:link,
 .social-text a:visited{
     text-decoration: none;
     color: #555;
+}
+.col-sm-4:after, .col-sm-8:after {
+display: table;
+content: "";
+clear: both;
 }
